donor: resolve status bar stats bar background + fix page height overflow

--- a/packages/donor/src/components/basic/ZMScreen/ZMScreen.module.scss
+++ b/packages/donor/src/components/basic/ZMScreen/ZMScreen.module.scss
@@ -1,3 +1,8 @@
-.after-header {
-  padding-top: 3.5rem;
+.component{
+  display: flex;
+  flex-direction: column;
+}
+.content {
+  flex-grow: 1;
+  overflow: auto;
 }
