--- a/packages/donor/src/screens/UpcommingDonation/UpcommingDonationScreen.module.scss
+++ b/packages/donor/src/screens/UpcommingDonation/UpcommingDonationScreen.module.scss
@@ -1,7 +1,3 @@
-.component {
-  height: 100%;
-}
-
 .content {
   box-sizing: border-box;
   padding: var(--layout-distance-large);
