--- a/packages/donor/src/screens/myProfile/MyProfileScreen.module.scss
+++ b/packages/donor/src/screens/myProfile/MyProfileScreen.module.scss
@@ -1,6 +1,3 @@
-.container {
-  height: 100%;
-}
 
 .component {
   padding: var(--layout-distance-xl);
